<resources>
    <string name="app_name">Laboratory Product</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="signup">SIGN UP</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google </string>
    <string name="skip"><![CDATA[Skip>]]></string>
    <string name="otp">OTP</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="myreports">My Reports</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="lablocation">Location Lab</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uploadpriscription">Upload Prescription</string>
    <string name="searchtests">Search and Book Tests</string>
    <string name="healthcheckuppackage">Health Check Up Packages</string>
    <string name="liver">LIVER</string>
    <string name="kidney">KIDNEY</string>
    <string name="bone">BONE</string>
    <string name="vitamin">VITAMIN</string>
    <string name="diabetes">DIABETES</string>
    <string name="smoking">SMOKING</string>
    <string name="noexercise">NO EXERCISE</string>
    <string name="alcohol">ALCOHOL</string>
    <string name="junkfood">JUNK FOOD</string>
    <string name="drugaddiction">DRUG ADDICTION</string>
    <string name="myorder">My Order</string>
    <string name="myfamily">My Family</string>
    <string name="myaddress">My Address</string>
    <string name="notification">Notification</string>
    <string name="changecity">Change City</string>
    <string name="contactus">Contact Us</string>
    <string name="refundpolicy">Refund Policy</string>
    <string name="logout">Logout</string>
    <string name="cs"><![CDATA[Be a Part Of C & S Solution]]></string>
    <string name="addmember">Add Family Member</string>
    <string name="addaddress">Add New Address</string>
    <string name="save">SAVE</string>
    <string name="age">Approx Age</string>
    <string name="bdate">Birth Date</string>
    <string name="preinformation">Pre Test Information</string>
    <string name="testparams">Test Parameters</string>
    <string name="relation">Relation</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="streetname">Street Name</string>
    <string name="flatno">Building number or flat number</string>
    <string name="searchlocation">Search Delivery Location</string>
    <string name="test">Test</string>
</resources>