<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginModule.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@drawable/box_10dp">

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:padding="7dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_backarrow"
                app:tint="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/textColor"
                android:fontFamily="@font/font_semi_bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginRight="36dp"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="25dp"
                android:paddingTop="25dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:background="@drawable/box_10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginVertical="7dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/stroke_box"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_phone" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/edtNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="14dp"
                        android:background="@null"
                        android:fontFamily="@font/font_regular"
                        android:hint="@string/mobile"
                        android:includeFontPadding="false"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColorLight"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginVertical="7dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/stroke_box"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_password" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/edtOtpPassword"
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="14dp"
                        android:background="@null"
                        android:fontFamily="@font/font_regular"
                        android:hint="@string/password"
                        android:includeFontPadding="false"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColorLight"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/ic_eye"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="7dp"
                    android:fontFamily="@font/font_semi_bold"
                    android:padding="7dp"
                    android:text="@string/forgotpassword"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginVertical="7dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/box_50dp"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/font_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginVertical="20dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@color/gray"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_medium"
                        android:gravity="center"
                        android:text="Login With"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@color/gray"/>

                    <!--                      star and end mate linearlayout -->

                </LinearLayout>

                <LinearLayout
                    android:layout_marginVertical="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_height="45dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginRight="7dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:background="@drawable/box_50dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivFacebook"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginLeft="8dp"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_fb" />

                        <TextView
                            android:id="@+id/tvFacebook"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/font_semi_bold"
                            android:gravity="center"
                            android:text="@string/facebook"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/box_50dp"
                        android:backgroundTint="#DC322E"
                        android:orientation="horizontal"
                        android:layout_height="45dp">

                        <ImageView
                            android:id="@+id/ivGoogle"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_google02" />

                        <TextView
                            android:id="@+id/tvGoogle"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/font_semi_bold"
                            android:gravity="center"
                            android:text="@string/google"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvSkip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/font_medium"
                    android:gravity="center"
                    android:text="@string/skip"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/lSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginVertical="7dp"
            android:paddingHorizontal="5dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_semi_bold"
                android:includeFontPadding="false"
                android:text="Don’t have an account?"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/font_bold"
                android:includeFontPadding="false"
                android:text="@string/signup"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</layout>